# advent_of_code_2024

./: CMakeLists.txt  LICENSE
include/: nlglib.hh
src/day1/: .clangd  CMakeLists.txt  main.cc
src/day2/: CMakeLists.txt  main.cc
